PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set(CMAKE_C_COMPILER "g++")
cmake_policy(SET CMP0015 OLD)
include_directories( ../include)
#add_definitions(-g -DAPPLICATION_TEST)
#link_directories(../lib/gtest-1.7.0)
AUX_SOURCE_DIRECTORY(. dir_srcs)
aux_source_directory(../src dir_srcs)
add_executable(main ${dir_srcs})
target_link_libraries(main libgtest.a libgtest_main.a pthread)
