PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(CMAKE_C_COMPILER "g++")
include_directories( ../include /home/qijunwei/googletest/googletest/include)
add_definitions(-g)
#link_directories(../lib/gtest-1.7.0)
AUX_SOURCE_DIRECTORY(. dir_srcs)
aux_source_directory(../src dir_srcs)
#option (cover_test "cover_test build" ON)
#if(cover_test)
#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fprofile-arcs -ftest-coverage")
#endif()

#OPTION (ENABLE_COVERAGE "Use gcov" ON)
#MESSAGE(STATUS ENABLE_COVERAGE=${ENABLE_COVERAGE})
#IF(ENABLE_COVERAGE)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
#ENDIF()
add_executable(main ${dir_srcs})
#target_compile_options(main PRIVATE -fprofile-arcs -ftest-coverage) 
#这句话必须放在add_executable的后面
target_link_libraries(main libgtest.a libgtest_main.a pthread)
